2023-09-17: [TESTS] Check decorations are rendered correctly during test suite
2023-09-16: [FEATURE] Add more popup templates for `Mpris2` widget
2023-09-16: [FEATURE] Add `PulseVolumeExtra` widget
2023-09-01: [BUGFIX] Fix two `RectDecoration` rendering bugs (issues #266 and #267)
2023-08-13: [BUGFIX] Fix `PowerLineDecoration` for Wayland (and make it generally better)
2023-08-10: [BUGFIX] X11 - fix issue with translucent decorations resulting in artefacts (needs latest qtile).
2023-08-06: [BREAKING CHANGE] Update imports to align with qtile codebase tidy. You need latest qtile git version.
2023-08-04: [BREAKING CHANGE] Fix decorations to work with wlroots0.16 update in qtile.
                              Note: You must be on latest git version of qtile.
2023-04-09: [BUGFIX] Fix menus in `StatusNotifier` for updated electron apps
2023-01-13: [FEATURE] Add support for local icons in `StatusNotifier` context menus
2023-01-03: [FEATURE] Add `PopupCircularProgress` control to popup toolkit
2022-12-31: [BUGFIX] Fix bug in `LiveFootballScores` info popup with excess separators
2022-12-26: [FEATURE] Add decoration grouping to BorderDecorations
2022-12-25: [BUGFIX] Catch errors where `SnapCast` widget can't retrieve ID from server
2022-12-22: [FEATURE] Add `Syncthing` widget
2022-12-21: [BUGFIX] Fix issue redrawing controls after mouse focus change
2022-12-20: [FEATURE] Add `ProgressBarMixin` and convert `ALSAWidget` and `BrightnessControl` to use mixin
2022-12-19: [BUGFIX] Update `StravaWidget` to `stravalib v1.1.0` (NB new dependency `pint`)
2022-12-03: [FEATURE] Add extended popup to `Mpris2`
2022-12-02: [BUGFUX] Fix startup slowdown caused by `ALSAWidget` 
2022-12-02: [BUGHFIX] Fixed bug when drawing masked images with `Image` widget
2022-12-01: [FEATURE] Add ability to fine tune position of `AnalogueClock`
2022-11-29: [BUGFIX] Handle JSON error in `TVHWidget`
2022-11-26: [FEATURE] Add extended popup to `LiveFootballScores`