@@ -1,3 +1,4 @@
+2023-09-18: [FEATURE] Add experimental support for `GlobalMenu` in Wayland.
 2023-09-17: [TESTS] Check decorations are rendered correctly during test suite
 2023-09-16: [FEATURE] Add more popup templates for `Mpris2` widget
 2023-09-16: [FEATURE] Add `PulseVolumeExtra` widget
